dataset/local/tf_ecs_latest_fargate/resource.yaml
apiVersion: terraform.io/v1
kind: Plan
metadata:
  name: good-plan
terraform_version: "1.8.4"
planned_values:
  root_module:
    resources:
      - type: aws_ecs_service
        values:
          launch_type: "FARGATE"
          platform_version: "LATEST"
---
apiVersion: terraform.io/v1
kind: Plan
metadata:
  name: bad-plan
terraform_version: "1.8.4"
planned_values:
  root_module:
    resources:
      - type: aws_ecs_service
        values:
          launch_type: "FARGATE"
          platform_version: "1.3.0"
