dataset/local/tf_ecs_latest_fargate/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: check-ecs-service-on-latest-fargate
policies:
  - policy.yaml
resources:
  - resource.yaml
results:
  - policy: check-ecs-service-on-latest-fargate
    kind: Plan
    resources:
      - good-plan
    result: pass
  - policy: check-ecs-service-on-latest-fargate
    kind: Plan
    resources:
      - bad-plan
    result: fail
